...
    _touchIDLabel = [[UILabel alloc] init];
    _touchIDLabel.textAlignment = NSTextAlignmentCenter;
    _touchIDLabel.text = @"Touch ID";
    [self.view addSubview:_touchIDLabel];
    
    _setupButton = [UIButton buttonWithType:UIButtonTypeSystem];
    [_setupButton setTitle:@"Set Pin" forState:UIControlStateNormal];
    [_setupButton addTarget:self action:@selector(onSetupButtonClick:) forControlEvents:UIControlEventTouchUpInside];
    [self.view addSubview:_setupButton];
    
    _lockButton = [UIButton buttonWithType:UIButtonTypeSystem];
    [_lockButton setTitle:@"Lock" forState:UIControlStateNormal];
    [_lockButton addTarget:self action:@selector(onLockButtonClick:) forControlEvents:UIControlEventTouchUpInside];
    [self.view addSubview:_lockButton];
    
}

- (void)viewDidLayoutSubviews {
...
